--- a/index.html
+++ b/index.html
@@ -1,55 +1,23 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>GIPHY FUN</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <script src="javascript.js"></script>
 </head>
 <body>
 
-<div>Empty div to populate with buttons</div>
+<div id="buttonsArea"></div>
 
-<!-- form with label (add your own (topic)) -->
+<form id="search-form">
+    <label for="search-input">Add your search topic:</label>
+    <input type="text" id="search-input"><br>
+    <input type="submit" value="Submit">
+</form>
 
-<!-- global variables - have an array of 20 animals (or other topic of your choice)
-    what functions do I need to get started
-    Need a function to display buttons (putting in dynamically)
-        function renderButton() {
-            for (var i = 0, i < animals.length, i++) {
-                var button = ("<buttons>")
-                    (add class, attributes, text for rating)
-                    buttons.addclass("animals");
-                    $("#buttonsView");
-            }
-        }
+<div id="searches"></div>
 
-    Need a function to display GIFs and ratings (write as one function)
-        function DisplayImages() {
-            $("animalsView").empty();
-            var animal = ($this).attr("data-name");
-            var query = "url" + animal + api (include limit of 10 resutls);
-                $.get({url:query})
-                .done(function(response){
-                    console.log(response)
-                    (may use code from play/pause activity)
-                })
-
-        }
-    Need click functions (keep together to compartmentalize)
-        on.click to add button to list
-            $("#addanimal").on("click", funciton(){
-                var.animal=$("animal-input").trim;.val();
-                animals.push(animal);
-                renderButtons();
-            })
-        second click function to add images to page
-        $(docment).on(click".animal"), displayImages(i)
-    additional functionality: function to play/pause GIF (do last) -->
-
-// API keyL=:0FGhwINevKerHN8I1FhMtQzN8gMRr886
+<script src="javascript.js" type="text/javascript"></script>
 
 </body>
 </html>
