--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>GIPHY FUN</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <script src="javascript.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Giphy</title>
 </head>
 <body>
 
-<div id="buttonsArea"></div>
+    <div class="container-fluid">
 
-<form id="search-form">
-    <label for="search-input">Add your search topic:</label>
-    <input type="text" id="search-input"><br>
-    <input type="submit" value="Submit">
-</form>
+        <div id="buttons-list"></div>
 
-<div id="searches"></div>
+        <form id = "zoo-animals-form">
+            <label for="zoo-animals-input">Type in a Zoo Animal</label>
+            <input type="text" id="zoo-animals-input">
 
-<script src="javascript.js" type="text/javascript"></script>
+            <input id = "add-zooAnimal" type="submit" value="Let's Go To The Zoo!">
+        </form>
+
+        <div id="zooAnimal-expo"></div>
+
+    </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="giphy.js"></script>
 
 </body>
 </html>
