--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Giphy</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>Giphy Fun with Zoo Animals</title>
 </head>
+
+<header>
+    <div class="container-fluid">
+        <img src="/zoo.jpg" width="300px" height="100px">
+    </div>
+</header>
+
+<br>
+
 <body>
 
     <div class="container-fluid">
 
         <div id="buttons-list"></div>
+
+        <br>
 
         <form id = "zoo-animals-form">
             <label for="zoo-animals-input">Type in a Zoo Animal</label>
